fix: set white(ish) color attribute to textarea
Add white(ish) Color to text area to prevent invisible type. Issue in Webhook plugin where Template textarea content remain as invisible.

--- a/CSS/theme-oled.css
+++ b/CSS/theme-oled.css
@@ -59,6 +59,10 @@ input:not(.mdl-slider) {
     border: 2px solid var(--outline-color) !important;
 }
 
+textarea {
+    color: rgba(255, 255, 255, 0.8);
+}
+
 .navMenuOption:hover:not(.navMenuOption-selected) {
     background: var(--tertiary-background-color) !important;
 }
